<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />
        <variable
            name="scoresViewModel"
            type="com.callisto.kd205e.fragments.scores.ScoresViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progressBarSpecies"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{scoresViewModel.isLoading() ? View.VISIBLE : View.GONE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:visibility="gone"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{scoresViewModel.isLoading() ? View.GONE : View.VISIBLE}"
            >

            <LinearLayout
                android:id="@+id/panelScores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:context=".fragments.species.ScoresFragment">

                <include
                    android:id="@+id/scoreSetterStrength"
                    layout="@layout/view_score_setter"
                    />

                <include
                    android:id="@+id/scoreSetterDexterity"
                    layout="@layout/view_score_setter"
                    />

                <include
                    android:id="@+id/scoreSetterConstitution"
                    layout="@layout/view_score_setter"
                    />

                <include
                    android:id="@+id/scoreSetterIntelligence"
                    layout="@layout/view_score_setter"
                    />

                <include
                    android:id="@+id/scoreSetterWisdom"
                    layout="@layout/view_score_setter"
                    />

                <include
                    android:id="@+id/scoreSetterCharisma"
                    layout="@layout/view_score_setter"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/panelPoints"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:visibility="@{scoresViewModel.mustDistributePoints ? View.VISIBLE : View.GONE}"
                app:layout_constraintTop_toBottomOf="@id/panelScores"
                app:layout_constraintBottom_toTopOf="@id/btnGoBackToSpeciesSelection"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/lblPoints"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_half"
                    android:text="@string/label_points"
                    />

                <TextView
                    android:id="@+id/txtPoints"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_half"
                    android:text="@{String.valueOf(scoresViewModel.pointsLeft)}"
                    app:layout_constraintBottom_toTopOf="@id/btnGoBackToSpeciesSelection"
                    app:layout_constraintEnd_toStartOf="@id/btnConfirm"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/panelScores"
                    tools:text="19" />

                <Button
                    android:id="@+id/btnConfirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_confirm"
                    android:enabled="@{scoresViewModel.pointsLeft == 0 }"
                    android:onClick="@{() -> scoresViewModel.onCharacterTraitAttributesConfirmed()}"
                    app:layout_constraintStart_toEndOf="@id/txtPoints"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/txtPoints"
                    app:layout_constraintBottom_toBottomOf="@id/txtPoints" />

            </LinearLayout>

            <Button
                android:id="@+id/btnGoBackToSpeciesSelection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_half"
                android:text="@string/lblGoBackToSpeciesSelection"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btnSelectAClass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_half"
                android:text="@string/lblPickAClass"
                android:enabled="@{!scoresViewModel.mustDistributePoints}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</layout>


