<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="rollViewModel"
            type="com.callisto.kd205e.fragments.roll.RollViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        tools:context=".activities.MainActivity">

        <TextView
            android:id="@+id/lblBaseRoll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_half"
            android:text="@string/base_roll"
            app:layout_constraintBaseline_toBaselineOf="@+id/txtBaseRoll"
            app:layout_constraintEnd_toStartOf="@+id/txtBaseRoll"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/txtBaseRoll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_half"
            android:text="@{rollViewModel.rollBase.toString()}"
            android:textAlignment="center"
            android:textSize="@dimen/textMedium"
            app:layout_constraintBaseline_toBaselineOf="@+id/editModifier"
            app:layout_constraintEnd_toStartOf="@+id/lblModifier"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toEndOf="@+id/lblBaseRoll" />

        <TextView
            android:id="@+id/lblModifier"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_half"
            android:text="@string/label_modifier"
            app:layout_constraintBaseline_toBaselineOf="@+id/editModifier"
            app:layout_constraintEnd_toStartOf="@+id/editModifier"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/txtBaseRoll" />

        <EditText
            android:id="@+id/editModifier"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_half"
            android:ems="10"
            android:inputType="numberSigned"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/lblModifier"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_weight="2"
            tools:text="4"/>

        <TextView
            android:id="@+id/lblResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_full"
            android:text="@{rollViewModel.rollAdjusted.toString()}"
            android:textSize="@dimen/textGinormous"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnRoll"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/lblDifficulty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_half"
            android:text="@string/lblDifficulty"
            app:layout_constraintTop_toBottomOf="@+id/editModifier"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_weight="1"
            />

        <Spinner
            android:id="@+id/spDifficulty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_half"
            app:layout_constraintStart_toEndOf="@+id/lblDifficulty"
            app:layout_constraintEnd_toStartOf="@+id/editDifficulty"
            app:layout_constraintTop_toBottomOf="@+id/editModifier"
            app:layout_constraintHorizontal_weight="3"
            />

        <!--        <androidx.recyclerview.widget.RecyclerView-->
<!--            android:id="@+id/rvDifficulty"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="@dimen/margin_half"-->
<!--            app:layout_constraintStart_toEndOf="@+id/lblDifficulty"-->
<!--            app:layout_constraintEnd_toStartOf="@+id/editDifficulty"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/editModifier"-->
<!--            app:layout_constraintHorizontal_weight="3"-->
<!--            />-->

        <EditText
            android:id="@+id/editDifficulty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_half"
            app:layout_constraintStart_toEndOf="@id/spDifficulty"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editModifier"
            app:layout_constraintHorizontal_weight="2"
            />

        <Button
            android:id="@+id/btnRoll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_full"
            android:layout_marginBottom="@dimen/margin_full"
            android:text="@string/btn_roll"
            android:onClick="@{() -> rollViewModel.onBtnRollClicked()}"
            app:layout_constraintBottom_toTopOf="@+id/lblResult"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblDifficulty" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>